--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ CXX = clang++
 CXXFLAGS = -std=c++17 -I/usr/local/opt/sfml/include
 LDFLAGS = -L/usr/local/opt/sfml/lib -lsfml-graphics -lsfml-window -lsfml-system
 
-SRC = classes/MouseTile.cpp classes/Grid.cpp main.cpp
+SRC = classes/Map.cpp classes/MouseTile.cpp classes/Grid.cpp main.cpp
 OBJ = $(SRC:.cpp=.o)
 
 all: map
